syntax = "proto3";

option go_package = "./proto";

package user_service;

service UserService {
    rpc CreateUser(User) returns (UserResponse);
    rpc LoginUser(LoginForm) returns (UserResponse);
}

message User {
    string username = 1;
    string password = 2;
    string name = 3;
    string usertype = 4;
}

message LoginForm {
    string username = 1;
    string password = 2;
}

message UserResponse {
    int32 status_code = 1;
    string message = 2;
}
